--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-title: John Doe
-bio: A Person who travels the world eating noodles
+title: Ehsan Sabouni
+bio: Passionate about control and autonomous systems
 
 # twitter summary info
 description: A blog about technology and stuff related
