--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 title: Ehsan Sabouni
-bio: Passionate about control and autonomous systems
+bio: P.h.D student at Boston University
 
 # twitter summary info
 description: A blog about technology and stuff related
