--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ facebook: myfacebook
 twitter: mytwitter
 instagram: myinstagram
 linkedin: mylinkedin
-github: mygithub
+github: https://github.com/EhsanSabouni
 email: myemail@gmail.com
 
 authors:
