--- a/_config.yml
+++ b/_config.yml
@@ -37,9 +37,9 @@ disqus:
 facebook: myfacebook
 twitter: mytwitter
 instagram: myinstagram
-linkedin: mylinkedin
-github: https://github.com/EhsanSabouni
-email: myemail@gmail.com
+linkedin: ehsan-sabouni-45469614b
+github: EhsanSabouni
+email: esabouni@bu.edu
 
 authors:
   johndoe:
