--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ dark-theme: auto
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume-url: https://drive.google.com/file/d/1iwUwCeJtFN_d6iyK-icEoToE8uGJiya1/view?usp=sharing
 
 url: https://sergiokopplin.github.io/indigo
 # your url: https://USERNAME.github.io
